[package]
name = "sagansearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entropy = "0.4.1"
reqwest = { version = "0.11.18", features =["json", "brotli"] }
rug = "1.19.2"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"