[package]
name = "sagansearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entropy = "0.4.1"
minreq = { version = "2.8.1", features = ["https-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
textplots = "0.8.0"
ctrlc = "3"
console = "0.15"
rgb = "0.8"